check bump-chart

--- a/.github/workflows/try.yaml
+++ b/.github/workflows/try.yaml
@@ -16,6 +16,6 @@ jobs:
   reusable_workflow_job:
     uses: MapColonies/shared-workflows/.github/workflows/build-and-push.yaml@master
     secrets: inherit
-  reusable_workflow_job:
+  reusable_workflow_job_2:
     uses: MapColonies/shared-workflows/.github/workflows/bump-chart.yaml@master
     secrets: inherit
