check bump-chart_2

--- a/.github/workflows/try.yaml
+++ b/.github/workflows/try.yaml
@@ -13,9 +13,9 @@ permissions:
   pull-requests: write
 
 jobs:
-  reusable_workflow_job:
-    uses: MapColonies/shared-workflows/.github/workflows/build-and-push.yaml@master
-    secrets: inherit
+  # reusable_workflow_job:
+  #   uses: MapColonies/shared-workflows/.github/workflows/build-and-push.yaml@master
+  #   secrets: inherit
   reusable_workflow_job_2:
     uses: MapColonies/shared-workflows/.github/workflows/bump-chart.yaml@master
     secrets: inherit
